css/main.css
@font-face {
  font-family: 'Pokemon';
  src: url('../assets/pokemon-font.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

html {
  font-size: 20px;
  -webkit-user-scalable: no;
  user-scalable: no;
}
body {
  font-size: 1rem;
  user-select: none;
  margin: 0 0;
  padding: 0;
  box-sizing: border-box;
}

.tileset-preview::after {
  content: 'Tileset Preview';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  color: red;
  background-color: rgba(0, 0, 0, 0.5);
  font-size: 1.5rem;
}
.main-canvas-container {
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sm {
  font-size: 0.5rem;
}
.md {
  font-size: 0.8rem;
}
.game-instructions {
  text-align: center;
}
.game-instructions-container {
  padding-top: 1rem;
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/* Desktop: hide d-pad */
.info {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
}
.camera-controls {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 1rem;
}
.invert {
  filter: invert(1);
}

@media (max-width: 600px) {
  html {
    font-size: 14px;
  }

  .main-canvas-container {
    margin-top: 0.5rem;
    padding: 0 8px;
  }

  /* Hide keyboard instructions, show d-pad */
  .info {
    display: none;
  }
  .camera-controls {
    flex-direction: row;
  }
  .sm {
    font-size: 0.7rem;
  }
  .md {
    font-size: 1rem;
  }
}

